Fix layout bug

--- a/src/styles/layout/_assigned_layout.sass
+++ b/src/styles/layout/_assigned_layout.sass
@@ -22,6 +22,7 @@
     display: grid
     grid-template-rows: auto 1fr
     height: 100%
+    overflow: auto
     padding: $gutter
 
     .assgin-tabs
